add slight descriptions to single frame classifier notebook

--- a/notebooks/frame_classification.ipynb
+++ b/notebooks/frame_classification.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Single Frame classifier pipeline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Impormodules that are going to be used in training and visualising single frame classification pipeline."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -14,6 +28,13 @@
     "import time\n",
     "\n",
     "from keras import layers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check to see what compute backends are available during runtime of notebook, simple way to make sure that compute paralelization is enabled."
    ]
   },
   {
@@ -34,6 +55,19 @@
    ],
    "source": [
     "tf.config.list_physical_devices()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This section of code contains all configurations of notebook, all tweakable parameters should be here in one cell block so no chasing through document is needed.\n",
+    "\n",
+    "- prng configuration for reproducability\n",
+    "- dataset configuration\n",
+    "- neural network configuration\n",
+    "- visualisation toggle\n",
+    "- inference toggle"
    ]
   },
   {
@@ -59,6 +93,13 @@
     "dataset_path = os.path.abspath(\"../data/classes\")\n",
     "checkpoint_path = os.path.abspath(\"../models/frame/cnn-mlp-{epoch:02d}.keras\" )\n",
     "tf.random.set_seed(seed)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dataset treatment and neural model assembly methods to enable model creation using above defined configs without need to change any code other than config cell."
    ]
   },
   {
@@ -171,6 +212,15 @@
     "\n",
     "    outputs = layers.Dense(num_classes, activation=\"softmax\")(x)\n",
     "    return tf.keras.Model(inputs, outputs)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Following code block contains methods that implement two mode of operation of this notebook, mode of operation configured in config block using \"run_inference\" boolean.\n",
+    "- training\n",
+    "- inference"
    ]
   },
   {
@@ -509,7 +559,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
